syntax = "proto3";

option csharp_namespace = "NeuronalNetClient.Proto";

package bitmap;

service Uploader {
  rpc SendBitmapData (stream BitmapData) returns (SuccessReply);

  rpc SendTrafficSign (TrafficSign) returns (SuccessReply);
  rpc SendMultipleTrafficSigns (stream TrafficSign) returns (SuccessReply);

  rpc GetSignTypeData (Null) returns (NumberOfSigns);
}

message BitmapData {
  int32 number = 1;
  bytes bitmap = 2;
}

message TrafficSign {
  SignType sign_type = 1;
  bytes red = 2;
  bytes green = 3;
  bytes blue = 4;
}

message NumberOfSigns {
  int32 Stop = 1;
  int32 ThirtySpeedLimit = 2;
  int32 FiftySpeedLimit = 3;
  int32 PriorityRoad = 4;
  int32 GiveWay = 5;
  int32 Unclassified = 6;
}

message SuccessReply {
  bool success = 1;
}

message Null {}

enum SignType {
  Stop = 0;
  ThirtySpeedLimit = 1;
  FiftySpeedLimit = 2;
  PriorityRoad = 3;
  GiveWay = 4;
  Unclassified = 5;
}